--- a/index2.html
+++ b/index2.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>BrthDay</title>
-	</head>
-	<body>
 
+<head>
+    <title>BrthDay</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="cs/brthdaystyles.css">
+</head>
 
-	<script src="https://code.jquery.com/jquery-2.1.1.js"></script>
-		<script>
+<body>
+    <div class="container">
+        <div class="col-lg-6">
+            <div class="input-group">
+                <input id="add_task" type="text" class="form-control" placeholder="What's your birthdate?" name="birthday">
+                <span class="input-group-btn">
+            	  <button id="add_button" class="btn btn-default" type="submit">Enter</button>
+            	</span>
+            </div>
+        </div>
+    </div>
 
-		</script>
-	</body>
+    <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="js/brthday.js"></script>
+</body>
+
 </html>
