console.log s out a link

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <title>BrthDay</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="cs/brthdaystyles.css">
+    <link rel="stylesheet" href="brthdaystyles.css">
 </head>
 
 <body>
     <div class="container">
         <div class="col-lg-6">
             <div class="input-group">
-                <input id="add_task" type="text" class="form-control" placeholder="What's your birthdate?" name="birthday">
+                <input id="add_task" type="text" class="form-control" placeholder="What's your birthdate? (mm/dd/yyyy)" name="birthday">
                 <span class="input-group-btn">
             	  <button id="add_button" class="btn btn-default" type="submit">Enter</button>
             	</span>
@@ -20,7 +20,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
-    <script type="text/javascript" src="js/brthday.js"></script>
+    <script type="text/javascript" src="brthday.js"></script>
 </body>
 
 </html>
