--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div>
-
+//no true edits, just trying to get the newest code on my end
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="brthday.js"></script>
 </body>
