--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body background="https://images.unsplash.com/photo-1459664018906-085c36f472af?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=0790a8686cb07ac8851066ef544f1082">
     <div class="heading">
-        <h1>Birthday "Truths"</h1></div>
+        <h1>What Happened on Your Birthday???</h1></div>
     <div></div>
     <div></div>
     <div class="explain">
-        <p><h3>Let's play few truths, and a lie! Input your birthdate, and we'll list a bunch of "truths". Spot the lie, and you'll gain street cred.</h3></p>
+        <p><h3>Input your birthdate, and we'll list some important events that happened on your big day!</h3></p>
     </div>
     <div></div>
     <div></div>
